# EmailMCP

./: .env.example  .env.production  .env.production.gcp  .gitignore  DEPLOYMENT.md  Dockerfile  FRONTEND_INTEGRATION.md  GCP-DEPLOYMENT.md  GMAIL_API_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_OAUTH_FIX.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FRONTEND.md  INTEGRATION_STATUS.md  LLM_ARCHITECTURE.txt  LLM_INTEGRATION.md  MCP_INTEGRATION_ROADMAP.md  OAUTH_404_FIX_SUMMARY.md  OAUTH_CONFIGURATION.md  OAUTH_ENVIRONMENT_CONFIG.md  OAUTH_FLOW_DIAGRAM.md  OAUTH_REDIRECT_URI_IMPLEMENTATION.md  OAUTH_REDIRECT_URI_QUICKSTART.md  OAUTH_REDIRECT_URI_VISUAL_GUIDE.md  OAUTH_SCOPES_MIGRATION.md  README.md  SAMPLE_FRONTEND_QUICKSTART.md  SIMPLE_INTEGRATION_GUIDE.md  SYSTEM_METADATA.md  TEST_SUITE_SUMMARY.md  USER_AUTHENTICATION_SERVICE.md  auth.py  config.py  docker-compose.yml  email_failures_policy.yaml  mcp_gmail.py  pyproject.toml  requirements.txt  run_tests.py  setup_gmail_credentials.py  (+1 more)
docs/: DEPLOYMENT-COMPARISON.md  QUICK-START.md  multi-tenant-integration.md
examples/: llm_integration_example.py  salesos-integration.js
infrastructure/: cloudformation.yml  minimal-test.yml  simplified-stack.yml
sample-frontend/: Dockerfile  MAIN_README.md  README.md  TESTING.md  VISUAL_DEMO.html  app.js  callback.html  config.js  index.html  setup.sh  start-fixed-frontend.sh  style.css  test-connection.html
scripts/: deploy.sh  deploy_gcp.sh  init_firestore.py  migrate_existing_users.py  setup_aws_secrets.py  setup_gcp.sh  test_actual_endpoints.py  (+3 more)
(+33 files in other folders)
